# polyomino-jigsaw-solver

./: .gitignore  README.md  pyproject.toml
scripts/: debug_contours.py
specs/001-polyomino-puzzle-solver/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/: main.py
src/gui/: __init__.py  board_tab.py  board_view.py  board_widget.py  editor_window.py  piece_tab.py  piece_widget.py  saved_puzzles_tab.py  visualization_window.py
src/logic/: rotation.py  solver.py  validator.py
src/models/: board.py  piece.py  puzzle_config.py  puzzle_state.py
src/polyomino_jigsaw_solver/models/: puzzle_piece.py
src/utils/: color_generator.py  file_io.py  formatting.py
src/woodster_jigsaw_solver/models/: puzzle_piece.py
src/woodster_jigsaw_solver/vision/: __init__.py  contour_analysis.py  contour_detection.py  contour_visualization.py  grid_conversion.py
tests/: test_puzzle_piece.py
tests/integration/: test_file_io_integration.py  test_puzzle_config.py  test_puzzle_flow.py
tests/unit/: test_board.py  test_file_io.py  test_gui_handlers.py  test_piece.py  test_rotation.py  test_solver.py  test_validator.py
